--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -10,6 +10,7 @@ pydantic-settings = "*"
 email-validator = "*"
 sqlalchemy = "*"
 alembic = "*"
+python-jose = {extras = ["cryptography"], version = "*"}
 
 [dev-packages]
 
